fix: Clean top nav header in base.html to reduce overflow at smaller screen sizes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Lato', sans-serif !important;
     background-color: #fff !important;
-    padding-top: 50px;
+    padding-top: 100px;
     min-height: 100vh;
 }
 
@@ -14,18 +14,15 @@ body {
     max-height: 100px;
 }
 
-.logo {
-    max-width: 200px;
-}
 
 .logo-img {
-    max-height: 100%;
+    max-height: 100px;
 }
 
 .search {
     padding-top: 30px;
-    width: 70vw;
-    max-width: 800px;
+    width: 50vw;
+    max-width: 600px;
     min-width: 300px;
 }
 
@@ -36,4 +33,13 @@ body {
 
 .icons {
     padding-top: 30px;
+}
+
+.icons li {
+    padding: 0 5px;
+}
+
+.icons a {
+    text-decoration: none;
+    color: #000;
 }
